[#162982150] Swagger changes. Operations are: debit, credit. The response shoud provide a datetime of created feed.
